<resources>
    <string name="app_name">Birthdays</string>
    <string name="google_play_link">https://play.google.com/store/apps/details?id=vadiole.birthdays</string>
    <string name="more_options">More options</string>
    <string name="main_activity_header">Birthdays</string>
    <string name="selectDataOfBirthday">Date of Birthday</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System theme</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_data">Data</string>
    <string name="for_all">For all</string>
    <string name="notifications">Notifications</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="support_development">Support development</string>
    <string name="help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="choose_theme">Choose theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">Follow System</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter name</string>
    <string name="select_date_of_birthday">Select date of birthday</string>
    <string name="save_btn">Save</string>

    <string-array name="months">
        <item>@string/january</item>
        <item>@string/february</item>
        <item>@string/march</item>
        <item>@string/april</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/august</item>
        <item>@string/september</item>
        <item>@string/october</item>
        <item>@string/november</item>
        <item>@string/december</item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="fab_transformation_name">fab_transition</string>
    <string name="edit_birthday">Edit</string>
    <string name="phone_description">Phone number</string>
    <string name="email_descr">Email</string>
    <string name="back_arrow_descr">Back</string>
    <string name="telegram">Telegram</string>
    <string name="instagram_descr">Instagram</string>
    <string name="notes">Notes</string>
    <string name="presents">Gifts</string>
    <string name="placeholder_title">For now the list is empty</string>
    <string name="placeholder_body">Add first birthday</string>
    <string name="edit_name_hint">Name (required)</string>
    <string name="edit_date_hint">Birthday date (required)</string>
    <string name="edit_phone_number_hint">Phone number (optional)</string>
    <string name="edit_telegram_hint">Telegram (optional)</string>
    <string name="edit_instagram_hint">Instagram (optional)</string>
    <string name="edit_email_hint">Email (optional)</string>
    <string name="edit_notes_hint">Notes (optional)</string>
    <string name="edit_gifts_hint">Gifts (optional)</string>
    <string name="notes_copied">Notes was copied to clipboard</string>
    <string name="gifts_copied">Gifts was copied to clipboard</string>
    <string name="view_in_google_play_store">View in Google Play Store</string>
    <string name="version_info">Version info</string>
    <string name="will_added_in_future">This will be added in future updates</string>
    <string name="support">Support</string>
</resources>
