<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_theme"
        android:textAppearance="@style/AppTheme.AlertDialogTitle" />


    <FrameLayout
        android:id="@+id/item_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <RadioButton
            android:id="@+id/radio_btn_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/item_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <RadioButton
            android:id="@+id/radio_btn_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"/>

    </FrameLayout>



    <FrameLayout
        android:id="@+id/item_follow_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <RadioButton
            android:id="@+id/radio_btn_follow_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow_system" />
    </FrameLayout>



</LinearLayout>
