<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/menu_sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textAppearance="@style/AppTheme.MenuItem.Title" />

        <TextView
            android:id="@+id/sort_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_data"
            android:textAppearance="@style/AppTheme.MenuItem.Body" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="?attr/colorListDivider" />

    <LinearLayout
        android:id="@+id/menu_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textAppearance="@style/AppTheme.MenuItem.Title" />

        <TextView
            android:id="@+id/selected_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:textAppearance="@style/AppTheme.MenuItem.Body" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="?attr/colorListDivider" />

    <LinearLayout
        android:id="@+id/menu_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textAppearance="@style/AppTheme.MenuItem.Title" />

            <TextView
                android:id="@+id/notifications_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_all"
                android:textAppearance="@style/AppTheme.MenuItem.Body" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/divider_width"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:background="?attr/colorListDivider" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="false"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="?attr/colorListDivider" />

    <LinearLayout
        android:id="@+id/menu_advanced_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_settings_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            android:text="@string/advanced_settings"
            android:textAppearance="@style/AppTheme.MenuItem.Title" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="?attr/colorListDivider" />

    <LinearLayout
        android:id="@+id/menu_help_and_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_help_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            android:text="@string/help_and_feedback"
            android:textAppearance="@style/AppTheme.MenuItem.Title" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="?attr/colorListDivider" />


    <LinearLayout
        android:id="@+id/menu_support_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="25.25dp"
            android:paddingEnd="1.25dp"
            android:src="@drawable/ic_support_dev_24dp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            android:text="@string/support_development"
            android:textAppearance="@style/AppTheme.MenuItem.Title" />

    </LinearLayout>


</LinearLayout>
