<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingStart="16dp"
    android:paddingTop="0dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/fragment_edit_birthday">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_info_container2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            app:cardCornerRadius="@dimen/edit_avatar_radius"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/default_avatar" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:elegantTextHeight="true"
            android:hint="@string/edit_name_hint"
            android:inputType="textPersonName"
            android:maxLength="@integer/max_length"
            android:maxLines="@integer/max_lines"
            app:layout_constraintBottom_toTopOf="@+id/edit_birthday_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_birthday_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/edit_date_hint"
            android:inputType="date"
            android:paddingTop="2dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-16dp"
        android:background="?attr/colorListDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_info_container2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_phone"
        app:srcCompat="@drawable/ic_phone_24px" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_phone"
        style="@style/edit_birthday_base"
        android:layout_marginTop="14dp"
        android:hint="@string/edit_phone_number_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/telegram_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"

        app:layout_constraintBottom_toBottomOf="@+id/edit_telegram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_telegram"
        app:srcCompat="@drawable/ic_telegram" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_telegram"
        style="@style/edit_birthday_base"
        android:hint="@string/edit_telegram_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/telegram_icon"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-17dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_telegram">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/instagram_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"

            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/edit_instagram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_instagram"
            app:srcCompat="@drawable/ic_instagram" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_instagram"
            style="@style/edit_birthday_base"
            android:layout_marginStart="15dp"
            android:hint="@string/edit_instagram_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/instagram_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_email"
        app:srcCompat="@drawable/ic_email_24px" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_email"
        style="@style/edit_birthday_base"
        android:hint="@string/edit_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_icon"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-16dp"
        android:background="?attr/colorListDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/note_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/edit_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_notes"
        app:srcCompat="@drawable/ic_notes" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_notes"
        style="@style/edit_birthday_base"
        android:hint="@string/edit_notes_hint"
        android:inputType="textMultiLine"
        android:maxLength="256"
        android:maxLines="10"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/note_icon"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gifts_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/edit_gifts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_gifts"
        app:srcCompat="@drawable/ic_gift" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_gifts"
        style="@style/edit_birthday_base"
        android:hint="@string/edit_gifts_hint"
        android:inputType="textMultiLine"
        android:maxLength="256"
        android:maxLines="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gifts_icon"
        app:layout_constraintTop_toBottomOf="@+id/edit_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>
